objects/FieloCRUD__PageSection__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__Columns__c</fullName>
        <label>Columns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageLayout__c</fullName>
        <label>Page Layout</label>
        <referenceTo>FieloCRUD__PageLayout__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>PageSections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SiteName__c</fullName>
        <inlineHelpText>Complete this field if you want to display a heading for this section on the site. If you leave it blank the section header will be hidden.</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Visibility__c</fullName>
        <inlineHelpText>Define whether the section will be display when reading a record (view), when updating a record (edit) or in both scenarios.</inlineHelpText>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Page Section</label>
    <nameField>
        <label>Page Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>